<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ToggleButton
        android:id="@+id/buttonOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bulb"
        android:textOff=""
        android:textOn="" />

    <View
        android:id="@+id/ruler1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3mm"
        android:background="#555" />

    <RelativeLayout
        android:id="@+id/brightRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1mm"
        android:layout_marginTop="1mm"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/brightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3mm"
            android:layout_marginTop="2mm"
            android:text="@string/label_high"
            android:textColor="#fff"
            android:textSize="18dp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/bright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:id="@+id/ruler2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#555" />

    <RelativeLayout
        android:id="@+id/strobeRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/strobeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="3mm"
            android:layout_marginTop="2mm"
            android:text="@string/label_strobe"
            android:textColor="#fff"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/strobeTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/strobeLabel"
            android:layout_marginLeft="3mm"
            android:text="@string/label_frequency" />

        <SeekBar
            android:id="@+id/slider"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dip"
            android:layout_height="30dip"
            android:layout_below="@+id/strobeTimeLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1mm"
            android:max="400" />

        <CheckBox
            android:id="@+id/strobe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/strobeRow"
            android:layout_marginTop="1mm" />
    </RelativeLayout>

    <View
        android:id="@+id/ruler3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2mm"
        android:background="#555" />

</LinearLayout>